# CrazyLLM

./: .gitignore  LICENSE  README.md  llm_console.py  llm_server.py  main.py  mount_llm_service.sh  pyproject.toml  requirements.txt
gui/: gui.py  left_panel.py  middle_panel.py
hardware/: single_drone.py  swarm.py
llm/: dataset_generation.py  eval.py  execution_guard.py  llm.py  train.py  vlm.py
llm/parameters/: main.yaml
scripts/: vlm_console.py  vlm_drone.py  vlm_server.py
